APIs/googleapis.com/blogger/v3/javascript-client/README.md
# blogger_api

BloggerApi - JavaScript client for blogger_api
The Blogger API provides access to posts, comments and pages of a Blogger blog.
This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v3
- Package version: v3
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install blogger_api --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your blogger_api from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var BloggerApi = require('blogger_api');

var defaultClient = BloggerApi.ApiClient.instance;
// Configure OAuth2 access token for authorization: Oauth2c
var Oauth2c = defaultClient.authentications['Oauth2c'];
Oauth2c.accessToken = "YOUR ACCESS TOKEN"
// Configure OAuth2 access token for authorization: Oauth2
var Oauth2 = defaultClient.authentications['Oauth2'];
Oauth2.accessToken = "YOUR ACCESS TOKEN"

var api = new BloggerApi.BlogUserInfosApi()
var userId = "userId_example"; // {String} 
var blogId = "blogId_example"; // {String} 
var opts = {
  'xgafv': "xgafv_example", // {String} V1 error format.
  'accessToken': "accessToken_example", // {String} OAuth access token.
  'alt': "alt_example", // {String} Data format for response.
  'callback': "callback_example", // {String} JSONP
  'fields': "fields_example", // {String} Selector specifying which fields to include in a partial response.
  'key': "key_example", // {String} API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
  'oauthToken': "oauthToken_example", // {String} OAuth 2.0 token for the current user.
  'prettyPrint': true, // {Boolean} Returns response with indentations and line breaks.
  'quotaUser': "quotaUser_example", // {String} Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
  'uploadProtocol': "uploadProtocol_example", // {String} Upload protocol for media (e.g. \"raw\", \"multipart\").
  'uploadType': "uploadType_example", // {String} Legacy upload protocol for media (e.g. \"media\", \"multipart\").
  'maxPosts': 56 // {Number} 
};
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully. Returned data: ' + data);
  }
};
api.bloggerBlogUserInfosGet(userId, blogId, opts, callback);

```

## Documentation for API Endpoints

All URIs are relative to *https://blogger.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*BloggerApi.BlogUserInfosApi* | [**bloggerBlogUserInfosGet**](docs/BlogUserInfosApi.md#bloggerBlogUserInfosGet) | **GET** /v3/users/{userId}/blogs/{blogId} | 
*BloggerApi.BlogsApi* | [**bloggerBlogsGet**](docs/BlogsApi.md#bloggerBlogsGet) | **GET** /v3/blogs/{blogId} | 
*BloggerApi.BlogsApi* | [**bloggerBlogsGetByUrl**](docs/BlogsApi.md#bloggerBlogsGetByUrl) | **GET** /v3/blogs/byurl | 
*BloggerApi.BlogsApi* | [**bloggerBlogsListByUser**](docs/BlogsApi.md#bloggerBlogsListByUser) | **GET** /v3/users/{userId}/blogs | 
*BloggerApi.CommentsApi* | [**bloggerCommentsApprove**](docs/CommentsApi.md#bloggerCommentsApprove) | **POST** /v3/blogs/{blogId}/posts/{postId}/comments/{commentId}/approve | 
*BloggerApi.CommentsApi* | [**bloggerCommentsDelete**](docs/CommentsApi.md#bloggerCommentsDelete) | **DELETE** /v3/blogs/{blogId}/posts/{postId}/comments/{commentId} | 
*BloggerApi.CommentsApi* | [**bloggerCommentsGet**](docs/CommentsApi.md#bloggerCommentsGet) | **GET** /v3/blogs/{blogId}/posts/{postId}/comments/{commentId} | 
*BloggerApi.CommentsApi* | [**bloggerCommentsList**](docs/CommentsApi.md#bloggerCommentsList) | **GET** /v3/blogs/{blogId}/posts/{postId}/comments | 
*BloggerApi.CommentsApi* | [**bloggerCommentsListByBlog**](docs/CommentsApi.md#bloggerCommentsListByBlog) | **GET** /v3/blogs/{blogId}/comments | 
*BloggerApi.CommentsApi* | [**bloggerCommentsMarkAsSpam**](docs/CommentsApi.md#bloggerCommentsMarkAsSpam) | **POST** /v3/blogs/{blogId}/posts/{postId}/comments/{commentId}/spam | 
*BloggerApi.CommentsApi* | [**bloggerCommentsRemoveContent**](docs/CommentsApi.md#bloggerCommentsRemoveContent) | **POST** /v3/blogs/{blogId}/posts/{postId}/comments/{commentId}/removecontent | 
*BloggerApi.PageViewsApi* | [**bloggerPageViewsGet**](docs/PageViewsApi.md#bloggerPageViewsGet) | **GET** /v3/blogs/{blogId}/pageviews | 
*BloggerApi.PagesApi* | [**bloggerPagesDelete**](docs/PagesApi.md#bloggerPagesDelete) | **DELETE** /v3/blogs/{blogId}/pages/{pageId} | 
*BloggerApi.PagesApi* | [**bloggerPagesGet**](docs/PagesApi.md#bloggerPagesGet) | **GET** /v3/blogs/{blogId}/pages/{pageId} | 
*BloggerApi.PagesApi* | [**bloggerPagesInsert**](docs/PagesApi.md#bloggerPagesInsert) | **POST** /v3/blogs/{blogId}/pages | 
*BloggerApi.PagesApi* | [**bloggerPagesList**](docs/PagesApi.md#bloggerPagesList) | **GET** /v3/blogs/{blogId}/pages | 
*BloggerApi.PagesApi* | [**bloggerPagesPatch**](docs/PagesApi.md#bloggerPagesPatch) | **PATCH** /v3/blogs/{blogId}/pages/{pageId} | 
*BloggerApi.PagesApi* | [**bloggerPagesPublish**](docs/PagesApi.md#bloggerPagesPublish) | **POST** /v3/blogs/{blogId}/pages/{pageId}/publish | 
*BloggerApi.PagesApi* | [**bloggerPagesRevert**](docs/PagesApi.md#bloggerPagesRevert) | **POST** /v3/blogs/{blogId}/pages/{pageId}/revert | 
*BloggerApi.PagesApi* | [**bloggerPagesUpdate**](docs/PagesApi.md#bloggerPagesUpdate) | **PUT** /v3/blogs/{blogId}/pages/{pageId} | 
*BloggerApi.PostUserInfosApi* | [**bloggerPostUserInfosGet**](docs/PostUserInfosApi.md#bloggerPostUserInfosGet) | **GET** /v3/users/{userId}/blogs/{blogId}/posts/{postId} | 
*BloggerApi.PostUserInfosApi* | [**bloggerPostUserInfosList**](docs/PostUserInfosApi.md#bloggerPostUserInfosList) | **GET** /v3/users/{userId}/blogs/{blogId}/posts | 
*BloggerApi.PostsApi* | [**bloggerPostsDelete**](docs/PostsApi.md#bloggerPostsDelete) | **DELETE** /v3/blogs/{blogId}/posts/{postId} | 
*BloggerApi.PostsApi* | [**bloggerPostsGet**](docs/PostsApi.md#bloggerPostsGet) | **GET** /v3/blogs/{blogId}/posts/{postId} | 
*BloggerApi.PostsApi* | [**bloggerPostsGetByPath**](docs/PostsApi.md#bloggerPostsGetByPath) | **GET** /v3/blogs/{blogId}/posts/bypath | 
*BloggerApi.PostsApi* | [**bloggerPostsInsert**](docs/PostsApi.md#bloggerPostsInsert) | **POST** /v3/blogs/{blogId}/posts | 
*BloggerApi.PostsApi* | [**bloggerPostsList**](docs/PostsApi.md#bloggerPostsList) | **GET** /v3/blogs/{blogId}/posts | 
*BloggerApi.PostsApi* | [**bloggerPostsPatch**](docs/PostsApi.md#bloggerPostsPatch) | **PATCH** /v3/blogs/{blogId}/posts/{postId} | 
*BloggerApi.PostsApi* | [**bloggerPostsPublish**](docs/PostsApi.md#bloggerPostsPublish) | **POST** /v3/blogs/{blogId}/posts/{postId}/publish | 
*BloggerApi.PostsApi* | [**bloggerPostsRevert**](docs/PostsApi.md#bloggerPostsRevert) | **POST** /v3/blogs/{blogId}/posts/{postId}/revert | 
*BloggerApi.PostsApi* | [**bloggerPostsSearch**](docs/PostsApi.md#bloggerPostsSearch) | **GET** /v3/blogs/{blogId}/posts/search | 
*BloggerApi.PostsApi* | [**bloggerPostsUpdate**](docs/PostsApi.md#bloggerPostsUpdate) | **PUT** /v3/blogs/{blogId}/posts/{postId} | 
*BloggerApi.UsersApi* | [**bloggerUsersGet**](docs/UsersApi.md#bloggerUsersGet) | **GET** /v3/users/{userId} | 


## Documentation for Models

 - [BloggerApi.Blog](docs/Blog.md)
 - [BloggerApi.BlogList](docs/BlogList.md)
 - [BloggerApi.BlogLocale](docs/BlogLocale.md)
 - [BloggerApi.BlogPages](docs/BlogPages.md)
 - [BloggerApi.BlogPerUserInfo](docs/BlogPerUserInfo.md)
 - [BloggerApi.BlogPosts](docs/BlogPosts.md)
 - [BloggerApi.BlogUserInfo](docs/BlogUserInfo.md)
 - [BloggerApi.Comment](docs/Comment.md)
 - [BloggerApi.CommentAuthor](docs/CommentAuthor.md)
 - [BloggerApi.CommentAuthorImage](docs/CommentAuthorImage.md)
 - [BloggerApi.CommentBlog](docs/CommentBlog.md)
 - [BloggerApi.CommentInReplyTo](docs/CommentInReplyTo.md)
 - [BloggerApi.CommentList](docs/CommentList.md)
 - [BloggerApi.CommentPost](docs/CommentPost.md)
 - [BloggerApi.Page](docs/Page.md)
 - [BloggerApi.PageAuthor](docs/PageAuthor.md)
 - [BloggerApi.PageBlog](docs/PageBlog.md)
 - [BloggerApi.PageList](docs/PageList.md)
 - [BloggerApi.Pageviews](docs/Pageviews.md)
 - [BloggerApi.PageviewsCountsInner](docs/PageviewsCountsInner.md)
 - [BloggerApi.Post](docs/Post.md)
 - [BloggerApi.PostAuthor](docs/PostAuthor.md)
 - [BloggerApi.PostBlog](docs/PostBlog.md)
 - [BloggerApi.PostImagesInner](docs/PostImagesInner.md)
 - [BloggerApi.PostList](docs/PostList.md)
 - [BloggerApi.PostLocation](docs/PostLocation.md)
 - [BloggerApi.PostPerUserInfo](docs/PostPerUserInfo.md)
 - [BloggerApi.PostReplies](docs/PostReplies.md)
 - [BloggerApi.PostUserInfo](docs/PostUserInfo.md)
 - [BloggerApi.PostUserInfosList](docs/PostUserInfosList.md)
 - [BloggerApi.User](docs/User.md)
 - [BloggerApi.UserBlogs](docs/UserBlogs.md)
 - [BloggerApi.UserLocale](docs/UserLocale.md)


## Documentation for Authorization


Authentication schemes defined for the API:
### Oauth2


- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/blogger: Manage your Blogger account
  - https://www.googleapis.com/auth/blogger.readonly: View your Blogger account

### Oauth2c


- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/blogger: Manage your Blogger account
  - https://www.googleapis.com/auth/blogger.readonly: View your Blogger account

